# openmovement

./: README.md
Docs/ax3/: ax3-research.md
Downloads/AX3/: AX3-Firmware.md
Hardware/: LICENSE.TXT
Software/: LICENSE.TXT
Software/OM/omgui-android/: .gitignore  README.md  settings.gradle.kts
Software/OM/omgui-android/app/: build.gradle.kts
Software/OM/omgui-android/app/src/main/: AndroidManifest.xml
Software/OM/omgui-android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
Software/OM/omgui-android/app/src/main/cpp/shims/sys/: timeb.h
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/: MainActivity.kt
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/data/: AppSettingsStore.kt  Models.kt
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/device/: Ax3Repository.kt
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/export/: ExportManager.kt  OmConvertNative.kt
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/ui/: AppViewModel.kt  OpenMovementTabletApp.kt  Theme.kt
Software/OM/omgui-android/app/src/main/java/org/openmovement/omgui/android/util/: AxivityFormats.kt
Software/OM/omgui-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Software/OM/omgui-android/app/src/main/res/xml/: usb_device_filter.xml
